2006-11-19 Added semi-automatic docstring generation detailing all the
           kwargs that functions take using the artist introspection
           tools; eg 'help text now details the scatter kwargs
           that control the Text properties  - JDH

2006-11-17 Removed obsolete scatter_classic, leaving a stub to
           raise NotImplementedError; same for pcolor_classic - EF

2006-11-15 Removed obsolete pcolor_classic - EF

2006-11-15 Fixed 1588908 reported by Russel Owen; factored
           nonsingular method out of ticker.py, put it into
           transforms.py as a function, and used it in
           set_xlim and set_ylim. - EF

2006-11-14 Applied patch 1591716 by Ulf Larssen to fix a bug in
           apply_aspect.  Modified and applied patch
           1594894 by mdehoon to fix bugs and improve
           formatting in lines.py. Applied patch 1573008
           by Greg Willden to make psd etc. plot full frequency
           range for complex inputs. - EF

2006-11-14 Improved the ability of the colorbar to track
           changes in corresponding image, pcolor, or
           contourf. - EF

2006-11-11 Fixed bug that broke Numeric compatibility;
           added support for alpha to colorbar.  The
           alpha information is taken from the mappable
           object, not specified as a kwarg. - EF

2006-11-05 Added broken_barh function for makring a sequence of
           horizontal bars broken by gaps -- see examples/broken_barh.py

2006-11-05 Removed lineprops and markerprops from the Annotation code
           and replaced them with an arrow configurable with kwarg
           arrowprops.  See examples/annotation_demo.py - JDH

2006-11-02 Fixed a pylab subplot bug that was causing axes to be
           deleted with hspace or wspace equals zero in
           subplots_adjust - JDH

2006-10-31 Applied axes3d patch 1587359
           http://sourceforge.net/tracker/index.php?func=detail&aid=1587359&group_id=80706&atid=560722
           JDH
